--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "beautifulsoup4>=4.14.2",
+    "google-genai>=1.45.0",
     "langextract>=1.0.9",
     "lxml>=6.0.2",
     "pydantic>=2.12.3",
