improved BERT example

--- a/examples/output/1810.04805_A.5_Illustrations_of_Fine-tuning_on_Different_Tasks_entities.json
+++ b/examples/output/1810.04805_A.5_Illustrations_of_Fine-tuning_on_Different_Tasks_entities.json
@@ -9,47 +9,11 @@
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
-    "text": "different tasks",
-    "type": "generic",
-    "char_interval": {
-      "start_pos": 40,
-      "end_pos": 55
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "Our task-specific models",
-    "type": "generic",
-    "char_interval": {
-      "start_pos": 80,
-      "end_pos": 104
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "BERT",
-    "type": "method",
-    "char_interval": {
-      "start_pos": 133,
-      "end_pos": 137
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "output layer",
-    "type": "object",
-    "char_interval": {
-      "start_pos": 158,
-      "end_pos": 170
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "entailment classification task",
+    "text": "entailment classification",
     "type": "task",
     "char_interval": {
-      "start_pos": 314,
-      "end_pos": 344
+      "start_pos": 315,
+      "end_pos": 340
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -57,44 +21,26 @@
     "text": "MNLI Multi-Genre Natural Language Inference",
     "type": "dataset",
     "char_interval": {
-      "start_pos": 239,
-      "end_pos": 282
+      "start_pos": 240,
+      "end_pos": 283
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
-    "text": "entailment",
-    "type": "other",
+    "text": "sentences",
+    "type": "object",
     "char_interval": {
-      "start_pos": 314,
-      "end_pos": 324
+      "start_pos": 363,
+      "end_pos": 372
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
-    "text": "contradiction",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 465,
-      "end_pos": 478
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "neutral",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 483,
-      "end_pos": 490
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "binary classification task",
+    "text": "binary classification",
     "type": "task",
     "char_interval": {
-      "start_pos": 551,
-      "end_pos": 577
+      "start_pos": 529,
+      "end_pos": 550
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -102,17 +48,17 @@
     "text": "QP Quora Question Pairs",
     "type": "dataset",
     "char_interval": {
-      "start_pos": 522,
-      "end_pos": 545
+      "start_pos": 500,
+      "end_pos": 523
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
-    "text": "binary classification task",
+    "text": "binary classification",
     "type": "task",
     "char_interval": {
-      "start_pos": 551,
-      "end_pos": 577
+      "start_pos": 529,
+      "end_pos": 550
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -120,8 +66,8 @@
     "text": "QNLI Question Natural Language Inference",
     "type": "dataset",
     "char_interval": {
-      "start_pos": 689,
-      "end_pos": 729
+      "start_pos": 648,
+      "end_pos": 688
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
@@ -129,35 +75,8 @@
     "text": "Stanford Question Answering Dataset",
     "type": "dataset",
     "char_interval": {
-      "start_pos": 750,
-      "end_pos": 785
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "binary classification task",
-    "type": "task",
-    "char_interval": {
-      "start_pos": 840,
-      "end_pos": 866
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "positive examples",
-    "type": "object",
-    "char_interval": {
-      "start_pos": 892,
-      "end_pos": 909
-    },
-    "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
-  },
-  {
-    "text": "negative examples",
-    "type": "object",
-    "char_interval": {
-      "start_pos": 986,
-      "end_pos": 1003
+      "start_pos": 709,
+      "end_pos": 744
     },
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   }
