--- a/examples/output/1810.04805_Unsupervised_Feature-based_Approaches_entities.json
+++ b/examples/output/1810.04805_Unsupervised_Feature-based_Approaches_entities.json
@@ -9,29 +9,11 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "non-neural",
-    "type": "method",
-    "char_interval": {
-      "start_pos": 111,
-      "end_pos": 121
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "neural",
-    "type": "method",
-    "char_interval": {
-      "start_pos": 188,
-      "end_pos": 194
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
     "text": "word embeddings",
     "type": "other",
     "char_interval": {
-      "start_pos": 262,
-      "end_pos": 277
+      "start_pos": 154,
+      "end_pos": 169
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -39,35 +21,26 @@
     "text": "NLP systems",
     "type": "other",
     "char_interval": {
-      "start_pos": 309,
+      "start_pos": 201,
+      "end_pos": 212
+    },
+    "section": "Unsupervised Feature-based Approaches"
+  },
+  {
+    "text": "word embedding vectors",
+    "type": "other",
+    "char_interval": {
+      "start_pos": 298,
       "end_pos": 320
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "embeddings learned from scratch",
-    "type": "generic",
-    "char_interval": {
-      "start_pos": 361,
-      "end_pos": 392
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "pretrain word embedding vectors",
+    "text": "left-to-right language modeling",
     "type": "task",
     "char_interval": {
-      "start_pos": 418,
-      "end_pos": 449
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "language modeling objectives",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 465,
-      "end_pos": 493
+      "start_pos": 322,
+      "end_pos": 353
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -75,8 +48,8 @@
     "text": "discriminate correct from incorrect words",
     "type": "task",
     "char_interval": {
-      "start_pos": 558,
-      "end_pos": 599
+      "start_pos": 406,
+      "end_pos": 447
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -84,8 +57,8 @@
     "text": "sentence embeddings",
     "type": "other",
     "char_interval": {
-      "start_pos": 722,
-      "end_pos": 741
+      "start_pos": 548,
+      "end_pos": 567
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -93,8 +66,8 @@
     "text": "paragraph embeddings",
     "type": "other",
     "char_interval": {
-      "start_pos": 790,
-      "end_pos": 810
+      "start_pos": 571,
+      "end_pos": 591
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -102,8 +75,8 @@
     "text": "train sentence representations",
     "type": "task",
     "char_interval": {
-      "start_pos": 837,
-      "end_pos": 867
+      "start_pos": 596,
+      "end_pos": 626
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -111,8 +84,8 @@
     "text": "rank candidate next sentences",
     "type": "task",
     "char_interval": {
-      "start_pos": 903,
-      "end_pos": 932
+      "start_pos": 662,
+      "end_pos": 691
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -120,17 +93,17 @@
     "text": "left-to-right generation of next sentence words",
     "type": "task",
     "char_interval": {
-      "start_pos": 981,
-      "end_pos": 1028
+      "start_pos": 693,
+      "end_pos": 740
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
     "text": "denoising autoencoder derived objectives",
-    "type": "other",
+    "type": "task",
     "char_interval": {
-      "start_pos": 1101,
-      "end_pos": 1141
+      "start_pos": 793,
+      "end_pos": 833
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -138,8 +111,8 @@
     "text": "ELMo",
     "type": "method",
     "char_interval": {
-      "start_pos": 1162,
-      "end_pos": 1166
+      "start_pos": 835,
+      "end_pos": 839
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -147,17 +120,8 @@
     "text": "word embedding research",
     "type": "other",
     "char_interval": {
-      "start_pos": 1254,
-      "end_pos": 1277
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "context-sensitive features",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 1320,
-      "end_pos": 1346
+      "start_pos": 885,
+      "end_pos": 908
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -165,17 +129,8 @@
     "text": "language model",
     "type": "other",
     "char_interval": {
-      "start_pos": 1388,
-      "end_pos": 1402
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "token",
-    "type": "object",
-    "char_interval": {
-      "start_pos": 1442,
-      "end_pos": 1447
+      "start_pos": 1019,
+      "end_pos": 1033
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -183,17 +138,17 @@
     "text": "contextual representation",
     "type": "other",
     "char_interval": {
-      "start_pos": 1408,
-      "end_pos": 1433
+      "start_pos": 1039,
+      "end_pos": 1064
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "left-to-right representations",
+    "text": "left-to-right",
     "type": "other",
     "char_interval": {
-      "start_pos": 1476,
-      "end_pos": 1489
+      "start_pos": 985,
+      "end_pos": 998
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -201,8 +156,8 @@
     "text": "right-to-left representations",
     "type": "other",
     "char_interval": {
-      "start_pos": 1494,
-      "end_pos": 1523
+      "start_pos": 1125,
+      "end_pos": 1154
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -210,26 +165,8 @@
     "text": "contextual word embeddings",
     "type": "other",
     "char_interval": {
-      "start_pos": 1542,
-      "end_pos": 1568
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "task-specific architectures",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 1583,
-      "end_pos": 1610
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "ELMo",
-    "type": "method",
-    "char_interval": {
-      "start_pos": 1612,
-      "end_pos": 1616
+      "start_pos": 1173,
+      "end_pos": 1199
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -237,8 +174,8 @@
     "text": "question answering",
     "type": "task",
     "char_interval": {
-      "start_pos": 1712,
-      "end_pos": 1730
+      "start_pos": 1321,
+      "end_pos": 1339
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -246,8 +183,8 @@
     "text": "sentiment analysis",
     "type": "task",
     "char_interval": {
-      "start_pos": 1756,
-      "end_pos": 1774
+      "start_pos": 1341,
+      "end_pos": 1359
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -255,8 +192,17 @@
     "text": "named entity recognition",
     "type": "task",
     "char_interval": {
-      "start_pos": 1801,
-      "end_pos": 1825
+      "start_pos": 1365,
+      "end_pos": 1389
+    },
+    "section": "Unsupervised Feature-based Approaches"
+  },
+  {
+    "text": "predict a single word from both left and right context",
+    "type": "task",
+    "char_interval": {
+      "start_pos": 1476,
+      "end_pos": 1530
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -264,8 +210,8 @@
     "text": "LSTMs",
     "type": "method",
     "char_interval": {
-      "start_pos": 2010,
-      "end_pos": 2015
+      "start_pos": 1537,
+      "end_pos": 1542
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -273,26 +219,26 @@
     "text": "their model",
     "type": "generic",
     "char_interval": {
-      "start_pos": 2034,
-      "end_pos": 2045
+      "start_pos": 1561,
+      "end_pos": 1572
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "cloze task",
+    "text": "the cloze task",
     "type": "task",
     "char_interval": {
-      "start_pos": 2128,
-      "end_pos": 2138
+      "start_pos": 1651,
+      "end_pos": 1665
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "text generation",
-    "type": "task",
+    "text": "text generation models",
+    "type": "object",
     "char_interval": {
-      "start_pos": 2180,
-      "end_pos": 2195
+      "start_pos": 1707,
+      "end_pos": 1729
     },
     "section": "Unsupervised Feature-based Approaches"
   }
