--- a/examples/output/1810.04805_Unsupervised_Feature-based_Approaches_entities.json
+++ b/examples/output/1810.04805_Unsupervised_Feature-based_Approaches_entities.json
@@ -1,10 +1,10 @@
 [
   {
-    "text": "Learning widely applicable representations of words",
-    "type": "task",
+    "text": "representations",
+    "type": "other",
     "char_interval": {
-      "start_pos": 0,
-      "end_pos": 51
+      "start_pos": 27,
+      "end_pos": 42
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -18,11 +18,11 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "NLP systems",
+    "text": "embeddings",
     "type": "other",
     "char_interval": {
-      "start_pos": 201,
-      "end_pos": 212
+      "start_pos": 253,
+      "end_pos": 263
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -36,20 +36,11 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "left-to-right language modeling",
-    "type": "task",
+    "text": "language modeling",
+    "type": "other",
     "char_interval": {
-      "start_pos": 322,
+      "start_pos": 336,
       "end_pos": 353
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "discriminate correct from incorrect words",
-    "type": "task",
-    "char_interval": {
-      "start_pos": 406,
-      "end_pos": 447
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -72,38 +63,20 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "train sentence representations",
-    "type": "task",
+    "text": "sentence representations",
+    "type": "other",
     "char_interval": {
-      "start_pos": 596,
+      "start_pos": 602,
       "end_pos": 626
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "rank candidate next sentences",
-    "type": "task",
-    "char_interval": {
-      "start_pos": 662,
-      "end_pos": 691
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "left-to-right generation of next sentence words",
-    "type": "task",
-    "char_interval": {
-      "start_pos": 693,
-      "end_pos": 740
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "denoising autoencoder derived objectives",
-    "type": "task",
+    "text": "denoising autoencoder",
+    "type": "other",
     "char_interval": {
       "start_pos": 793,
-      "end_pos": 833
+      "end_pos": 814
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -126,6 +99,15 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
+    "text": "context-sensitive features",
+    "type": "other",
+    "char_interval": {
+      "start_pos": 951,
+      "end_pos": 977
+    },
+    "section": "Unsupervised Feature-based Approaches"
+  },
+  {
     "text": "language model",
     "type": "other",
     "char_interval": {
@@ -144,28 +126,10 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "left-to-right",
+    "text": "word embeddings",
     "type": "other",
     "char_interval": {
-      "start_pos": 985,
-      "end_pos": 998
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "right-to-left representations",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 1125,
-      "end_pos": 1154
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "contextual word embeddings",
-    "type": "other",
-    "char_interval": {
-      "start_pos": 1173,
+      "start_pos": 1184,
       "end_pos": 1199
     },
     "section": "Unsupervised Feature-based Approaches"
@@ -198,11 +162,11 @@
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "predict a single word from both left and right context",
+    "text": "predict a single word",
     "type": "task",
     "char_interval": {
-      "start_pos": 1476,
-      "end_pos": 1530
+      "start_pos": 1455,
+      "end_pos": 1476
     },
     "section": "Unsupervised Feature-based Approaches"
   },
@@ -210,35 +174,53 @@
     "text": "LSTMs",
     "type": "method",
     "char_interval": {
-      "start_pos": 1537,
-      "end_pos": 1542
+      "start_pos": 1516,
+      "end_pos": 1521
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "their model",
-    "type": "generic",
+    "text": "ELMo",
+    "type": "method",
     "char_interval": {
-      "start_pos": 1561,
-      "end_pos": 1572
+      "start_pos": 1534,
+      "end_pos": 1538
     },
     "section": "Unsupervised Feature-based Approaches"
   },
   {
-    "text": "the cloze task",
+    "text": "feature-based",
+    "type": "other",
+    "char_interval": {
+      "start_pos": 1555,
+      "end_pos": 1568
+    },
+    "section": "Unsupervised Feature-based Approaches"
+  },
+  {
+    "text": "deeply bidirectional",
+    "type": "other",
+    "char_interval": {
+      "start_pos": 1577,
+      "end_pos": 1597
+    },
+    "section": "Unsupervised Feature-based Approaches"
+  },
+  {
+    "text": "cloze task",
+    "type": "other",
+    "char_interval": {
+      "start_pos": 1615,
+      "end_pos": 1625
+    },
+    "section": "Unsupervised Feature-based Approaches"
+  },
+  {
+    "text": "text generation",
     "type": "task",
     "char_interval": {
-      "start_pos": 1651,
-      "end_pos": 1665
-    },
-    "section": "Unsupervised Feature-based Approaches"
-  },
-  {
-    "text": "text generation models",
-    "type": "object",
-    "char_interval": {
-      "start_pos": 1707,
-      "end_pos": 1729
+      "start_pos": 1667,
+      "end_pos": 1682
     },
     "section": "Unsupervised Feature-based Approaches"
   }
